--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <% if flash[:notice] %>
+  	<% if flash[:notice] %>
   		<div class="notification is-primary global-notification">
   			<p class="notice"><%= notice %></p>
   		</div>
@@ -20,11 +20,10 @@
   			<p class="alert"><%= alert %></p>
   		</div>
   	<% end %>
-
-    <nav class="navbar is-info">
+  	<nav class="navbar is-info">
   		<div class="navbar-brand">
   		<%= link_to root_path, class: "navbar-item" do %>
-  			<h1 class="title is-5">Vwittter</h1>
+  			<h1 class="title is-5">Vwitter</h1>
   		<% end %>
 			<div class="navbar-burger burger" data-target="navbarExample">
 					<span></span>
@@ -40,7 +39,27 @@
 						<p class="control">
 							<%= link_to 'Nuevo Vweeet', new_tweet_path, class: "button is-info is-inverted" %>
 						</p>
-    </nav>
+            <% if user_signed_in? %>
+              <p class="control">
+                <%= link_to current_user.name, edit_user_registration_path, class: "button is-info" %>
+              </p>
+              <p>
+                <%= link_to "Salir", destroy_user_session_path, method: :delete, class:"button is-info" %>
+              </p>
+            <% else %>
+            <p class="control">
+              <%= link_to 'Acceder', new_user_session_path, class: "button is-info" %>
+            </p>
+						<p class="control">
+              <%= link_to 'Registrarse', new_user_registration_path, class: "button is-info" %>
+            </p>
+            <% end %>
+            </div>
+					</div>
+				</div>
+			</div>
+  	</nav>
+
     <%= yield %>
   </body>
 </html>
