--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -23,8 +23,8 @@
   		</div>
   		<div class="media-content">
   			<div class="content">
-  				<strong>Anderson</strong><br />
-  				<small>AJMV</small><br/>
+  				<strong><%= tweet.user.name %></strong><br />
+  				<small><%= tweet.user.username %></small><br/>
   				<p><%= tweet.tweet %></p>
   			</div>
         
