--- a/app/views/tweets/_profile.html.erb
+++ b/app/views/tweets/_profile.html.erb
@@ -28,14 +28,14 @@
 				</div>
 				<div class="level-item has-centered-text">
 					<div>
-						<p class="heading">Following</p>
-						<p class="title is-6">123</p>
+						<p class="heading">Siguiendo</p>
+						<p class="title is-6">0</p>
 					</div>
 				</div>
 					<div class="level-item has-centered-text">
 					<div>
-						<p class="heading">Followers</p>
-						<p class="title is-6">465K</p>
+						<p class="heading">Seguidores</p>
+						<p class="title is-6">0</p>
 					</div>
 				</div>
 			</div>
