--- a/app/views/tweets/_who-to-follow.html.erb
+++ b/app/views/tweets/_who-to-follow.html.erb
@@ -1,6 +1,6 @@
 <div class="column">
 	<nav class="panel">
-		<p class="panel-heading">Who to Follow</p>
+		<p class="panel-heading">Quien te sigue?</p>
 	
 	<div class="panel-block">
 		<article class="media">
@@ -12,8 +12,8 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
+						<strong>Follower 1</strong>
+						<small>@f1</small>
 					</p>
 				</div>
 			</div>
@@ -29,8 +29,8 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
+						<strong>Follower 2</strong>
+						<small>@f2</small>
 					</p>
 				</div>
 			</div>
@@ -46,8 +46,8 @@
 			<div class="media-content">
 				<div class="content">
 					<p>
-						<strong>John Smith</strong>
-						<small>@johnsmith</small>
+						<strong>Follower 3</strong>
+						<small>@f3</small>
 					</p>
 				</div>
 			</div>
