--- a/app/views/tweets/_feed.html.erb
+++ b/app/views/tweets/_feed.html.erb
@@ -36,7 +36,7 @@
   					<%= link_to edit_tweet_path(tweet), class: "level-item" do %>
   					  <span class="icon"><i class="fa fa-pencil" aria-hidden="true"></i></span>
   					<% end %>
-  					<%= link_to tweet, method: :delete, data: { confirm: "Are you sure you want to delete this tweet?" } do %>
+  					<%= link_to tweet, method: :delete, data: { confirm: "Esta seguro que desea borrar este Vweet?" } do %>
   							<span class="icon"><i class="fa fa-trash-o" aria-hidden="true"></i></span>
   					<% end %>
   				</div>
