--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -14,7 +14,7 @@
 		<div class="navbar-item">
 			<div class="field is-grouped">
 				<p class="control">
-					<%= link_to 'ar', tweets_path, class: "button is-dark" %>
+					<%= link_to 'cancelar', tweets_path, class: "button is-dark" %>
 				</p>
 		</div>
 	</div>
